<resources>
    <string name="app_name">Бирюзовая катунь</string>
    <string name="title_activity_main2">Бирюзовая катунь</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">Создано в Детском технопарке Алтайского Края</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">"Бирюзовая Катунь". Интерактивная карта</string>
    <string name="menu_altair">Нулевой километр</string>
    <string name="menu_chudesa">Чудеса природы и культуры</string>
    <string name="menu_cavemap">Тавдинская пещера</string>
    <string name="menu_nikolay">Памятник Николаю Рериху</string>
    <string name="menu_prostor">Галерея "Простор"</string>
    <string name="menu_tavd_cave">Тавдинская Пещера</string>
    <string name="menu_cave">Пещерный комплекс</string>
    <string name="menu_vill">Усадьба Саржевских</string>
    <string name="menu_villiage">Усадьба Саржевских - 3D тур</string>
    <string name="menu_villiage_map">Усадьба Саржевских - интерактивная карта</string>

    <string name="menu_ozero">Озеро "Бирюзовая Катунь"</string>
    <string name="menu_obzor">Обзорный ролик</string>


    <string name="diff_panorams">Панорамы 360</string>
    <string name="diff_maps">Карты</string>
    <string name="diff_tours">3D туры</string>
    <string name="diff_authors">Авторы материалов</string>

    <array name="teams">
        <item>Горькие</item>
        <item>Озерники</item>
        <item>Альтаир</item>
        <item>Открытый космос</item>
        <item>Varapaparam</item>
        <item>Команда Ы</item>
        <item>ГеоНК</item>
        <item>ГеоTeam</item>
    </array>

    <string name="team_name_gorkie">Горькие</string>
    <string name="team_name_ozerniki">Озерники</string>
    <string name="team_name_altair">Альтаир</string>
    <string name="team_name_open_space">Открытый космос</string>
    <string name="team_name_varapaz">Varapaparam</string>
    <string name="team_name_team_s">Команда Ы</string>
    <string name="team_name_geoNK">ГеоНК</string>
    <string name="team_name_geoTeam">ГеоTeam</string>

</resources>
