<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/red_point_24dp"
            android:title="@string/menu_home" />

    <item android:title="@string/diff_panorams">
        <menu>
            <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/yeloow_point_24dp"
            android:title="@string/menu_nikolay" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/orange_point_24dp"
            android:title="@string/menu_altair" />
            <item
            android:id="@+id/nav_share"
            android:icon="@drawable/green_poit_24dp"
            android:title="@string/menu_chudesa" />
            </group>

        </menu>
    </item>

        <item android:title="@string/diff_tours">

            <menu>
                <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/cyan_point_24dp"
                    android:title="@string/menu_villiage" />
                </group>

            </menu>
        </item>


    <item android:title="@string/diff_maps">
        <menu>
            <group android:checkableBehavior="single">
            <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/purple_point_24dp"
            android:title="@string/menu_cavemap" />

            <item
                android:id="@+id/nav_cc"
                android:icon="@drawable/cyan_point_24dp"
                android:title="@string/menu_cave" />
            </group>
        </menu>

    </item>
        <item android:title="О проекте">
            <menu>
                <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_authors"
                    android:icon="@drawable/cyan_point_24dp"
                    android:title="@string/diff_authors"/>
                </group>
            </menu>
        </item>
</group>


</menu>
