<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.vrar.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_nikolay"
        android:name="com.example.vrar.ui.rerich.RerichFragment"
        android:label="@string/menu_nikolay"
        tools:layout="@layout/fragment_rerich" />

    <fragment
        android:id="@+id/nav_altair"
        android:name="com.example.vrar.ui.altayir.ZeroKilometrFragment"
        android:label="@string/menu_altair"
        tools:layout="@layout/fragment_altair" />

    <fragment
        android:id="@+id/nav_cave"
        android:name="com.example.vrar.ui.cavemap.CavemapFragment"
        android:label="@string/menu_cavemap"
        tools:layout="@layout/fragment_cave" />

    <fragment
        android:id="@+id/nav_chudesa"
        android:name="com.example.vrar.ui.dtqvant.ChudesaFragment"
        android:label="@string/menu_chudesa"
        tools:layout="@layout/fragment_shudesa" />

    <fragment
        android:id="@+id/nav_villiage"
        android:name="com.example.vrar.ui.viliage.VilliageFragment"
        android:label="@string/menu_villiage"
        tools:layout="@layout/fragment_villiage" />

    <fragment
        android:id="@+id/nav_cc"
        android:name="com.example.vrar.ui.cavecomplex.CavecomplexFragment"
        android:label="@string/menu_cave"
        tools:layout="@layout/fragment_cavecomplex" />
    <fragment
        android:id="@+id/nav_authors"
        android:name="com.example.vrar.ui.authors.AuthorsFragment"
        android:label="@string/diff_authors"
        tools:layout="@layout/fragmen_authors"/>
    <fragment
        android:id="@+id/nav_prostor"
        android:name="com.example.vrar.ui.prostor.ProstorFragment"
        android:label="@string/menu_prostor"
        tools:layout="@layout/fragment_prostor"
        />
    <fragment
        android:id="@+id/nav_obzor"
        android:name="com.example.vrar.ui.obzor.ProstorFragment"
        android:label="@string/menu_obzor"
        tools:layout="@layout/fragment_obzor"/>

</navigation>